Bug 678454 - coalesce events by accessible tree, r=tbsaunde