accessible/src/generic/DocAccessible.h
@@ -173,22 +173,10 @@ public:
     { return mChildDocuments.SafeElementAt(aIndex, nullptr); }
 
   /**
-   * Non-virtual method to fire a delayed event after a 0 length timeout.
-   *
-   * @param aEventType   [in] the nsIAccessibleEvent event type
-   * @param aDOMNode     [in] DOM node the accesible event should be fired for
-   * @param aAllowDupes  [in] rule to process an event (see EEventRule constants)
+   * Fire accessible event asynchronously.
    */
-  nsresult FireDelayedAccessibleEvent(uint32_t aEventType, nsINode *aNode,
-                                      AccEvent::EEventRule aAllowDupes = AccEvent::eRemoveDupes,
-                                      EIsFromUserInput aIsFromUserInput = eAutoDetect);
-
-  /**
-   * Fire accessible event after timeout.
-   *
-   * @param aEvent  [in] the event to fire
-   */
-  nsresult FireDelayedAccessibleEvent(AccEvent* aEvent);
+  void FireDelayedEvent(AccEvent* aEvent);
+  void FireDelayedEvent(uint32_t aEventType, Accessible* aTarget);
 
   /**
    * Fire value change event on the given accessible if applicable.
@@ -398,27 +386,28 @@ protected:
   bool UpdateAccessibleOnAttrChange(mozilla::dom::Element* aElement,
                                     nsIAtom* aAttribute);
 
-    /**
-     * Fires accessible events when attribute is changed.
-     *
-     * @param aContent - node that attribute is changed for
-     * @param aNameSpaceID - namespace of changed attribute
-     * @param aAttribute - changed attribute
-     */
-    void AttributeChangedImpl(nsIContent* aContent, int32_t aNameSpaceID, nsIAtom* aAttribute);
+  /**
+   * Fire accessible events when attribute is changed.
+   *
+   * @param aAccessible   [in] accessible the DOM attribute is changed for
+   * @param aNameSpaceID  [in] namespace of changed attribute
+   * @param aAttribute    [in] changed attribute
+   */
+  void AttributeChangedImpl(Accessible* aAccessible,
+                            int32_t aNameSpaceID, nsIAtom* aAttribute);
 
-    /**
-     * Fires accessible events when ARIA attribute is changed.
-     *
-     * @param aContent - node that attribute is changed for
-     * @param aAttribute - changed attribute
-     */
-    void ARIAAttributeChanged(nsIContent* aContent, nsIAtom* aAttribute);
+  /**
+   * Fire accessible events when ARIA attribute is changed.
+   *
+   * @param aAccessible  [in] accesislbe the DOM attribute is changed for
+   * @param aAttribute   [in] changed attribute
+   */
+  void ARIAAttributeChanged(Accessible* aAccessible, nsIAtom* aAttribute);
 
   /**
    * Process ARIA active-descendant attribute change.
    */
-  void ARIAActiveDescendantChanged(nsIContent* aElm);
+  void ARIAActiveDescendantChanged(Accessible* aAccessible);
 
   /**
    * Update the accessible tree for inserted content.
