accessible/src/xpcom/nsAccEvent.cpp
@@ -45,7 +45,7 @@ nsAccEvent::GetDOMNode(nsIDOMNode** aDOMNode)
   NS_ENSURE_ARG_POINTER(aDOMNode);
   *aDOMNode = nullptr;
 
-  nsINode* node = mEvent->GetNode();
+  nsINode* node = mEvent->GetAccessible()->GetNode();
   if (node)
     CallQueryInterface(node, aDOMNode);
 
